--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -8,7 +8,8 @@
         android:id="@+id/introVideoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:keepScreenOn="true" />
+        android:keepScreenOn="true"
+        android:scaleType="fitXY" />
 
     <Button
         android:id="@+id/startGameButton"
