--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -4,18 +4,98 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
-    <VideoView
-        android:id="@+id/introVideo"
+    <ImageView
+        android:id="@+id/backgroundImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
+
+    <ImageView
+        android:id="@+id/wizardAura"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
         android:layout_gravity="center"
-        android:keepScreenOn="true" />
+        android:alpha="0"
+        android:src="@drawable/green_aura"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/elfAura"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:layout_gravity="center"
+        android:alpha="0"
+        android:src="@drawable/golden_aura"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/blackWizard"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:adjustViewBounds="true"
+        android:alpha="0"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/elfGuardian"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:adjustViewBounds="true"
+        android:alpha="0"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:id="@+id/gemRow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="visible">
+
+        <ImageView
+            android:id="@+id/redGem"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:alpha="0"
+            android:padding="8dp" />
+
+        <ImageView
+            android:id="@+id/blueGem"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:alpha="0"
+            android:padding="8dp" />
+
+        <ImageView
+            android:id="@+id/greenGem"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:alpha="0"
+            android:padding="8dp" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/subtitleText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_margin="32dp"
+        android:alpha="0"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginBottom="48dp"
         android:backgroundTint="@android:color/holo_purple"
         android:text="@string/start_game"
         android:textColor="@android:color/white"
