--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -70,6 +70,13 @@
             android:padding="8dp" />
 
         <ImageView
+            android:id="@+id/turquoiseGem"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:alpha="0"
+            android:padding="8dp" />
+
+        <ImageView
             android:id="@+id/greenGem"
             android:layout_width="96dp"
             android:layout_height="96dp"
