--- a/app/src/main/res/layout/activity_start_game.xml
+++ b/app/src/main/res/layout/activity_start_game.xml
@@ -207,6 +207,19 @@
         tools:text="Artheon the Warrior" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/openCodexButton"
+        android:layout_width="240dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="12dp"
+        android:text="@string/codex_open_button"
+        android:textAllCaps="false"
+        android:textSize="16sp"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/startBattleButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/backButton"
         android:layout_width="200dp"
         android:layout_height="100dp"
