--- a/app/src/main/res/layout/activity_character_selection.xml
+++ b/app/src/main/res/layout/activity_character_selection.xml
@@ -52,14 +52,33 @@
                     android:orientation="vertical"
                     android:padding="12dp">
 
-                    <ImageView
-                        android:id="@+id/heroImageWarrior"
+                    <FrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/hero_card_image_height"
-                        android:adjustViewBounds="true"
-                        android:contentDescription="@string/hero_warrior"
-                        android:scaleType="centerCrop"
-                        tools:src="@drawable/ic_launcher_foreground" />
+                        android:layout_height="@dimen/hero_card_image_height">
+
+                        <ImageView
+                            android:id="@+id/heroImageWarrior"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:adjustViewBounds="true"
+                            android:contentDescription="@string/hero_warrior"
+                            android:scaleType="centerCrop"
+                            tools:src="@drawable/ic_launcher_foreground" />
+
+                        <ImageView
+                            android:id="@+id/heroWeaponWarrior"
+                            android:layout_width="56dp"
+                            android:layout_height="56dp"
+                            android:layout_gravity="bottom|end"
+                            android:layout_margin="8dp"
+                            android:adjustViewBounds="true"
+                            android:background="@android:color/transparent"
+                            android:contentDescription="@null"
+                            android:padding="4dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="gone"
+                            tools:src="@drawable/ic_launcher_foreground" />
+                    </FrameLayout>
 
                     <TextView
                         android:id="@+id/heroLabelWarrior"
